test/error/StSwitchNoCases.fu
public static class Test
{
	public static bool Run()
	{
		switch (42) {
		} //ERROR: Switch with no cases
	}
}
